# Cagetti2005tk

./: ._relpath-to-latexroot.ltx  .cursorignore  .cursorindexingignore  .cursorindexingignore.additions  .dockerignore  .editorconfig  .gitattributes  .gitconfig  .gitignore  .markdownlint.json  .zenodo.json  ARCHITECTURE.md  CITATION.cff  Cagetti2005-tk_bellman-stages.ipynb  Dockerfile  HAFiscal-Slides.tex  HAFiscal.bib  HAFiscal.dep  HAFiscal.md  HAFiscal.tex  HANK-and-SAM-tutorial.ipynb  HANK_and_SAM_tutorial_utils.py  NOTEBOOK-CONSOLIDATION.md  README.md  REMARK.md  Subfiles.ltx  _config.yml  codemeta.json  pyproject.toml  reproduce.py  reproduce.sh  reproduce_min.sh  schema.json  setup.sh
.devcontainer/: CURSOR_STANDALONE.md  QUICKSTART-TERMINAL.md  QUICKSTART.md  devcontainer.json
@local/: ._relpath-to-latexroot.ltx  @local-is-for-project-specific-config-files.md  METADATA_SST.md  _inputpaths.ltx  _projectname.ltx  _workspace.ltx  acknowledgments.texinput  config.ltx  econark-econsocart-compat.sty  hiddenappendix-failed-approaches.md  hiddenappendix-high-concept-alternatives.md  hiddenappendix-implementation.md  hiddenappendix.sty  in-showlabels-mode.sty  local-qe-figs-and-tables.sty  local-qe-standalone.sty  local-qe.sty  local.sty  metadata.ltx  owner.tex  pathtools.sty  qe-fix-runtitle-draft.sty  qr-code.eps  transform-online-appendix-refs-for-qe.sh  webpdf-macros.sty
@resources/: project-metadata.ltx  subfile-setup.ltx  tex-paths.ltx
Code/: README.md
Data/: README.md
Equations/: README.md  splurge.ltx
Figures/: HANK_IRFs.tex  HANK_multipliers.tex  LorenzPts_robustness_R.tex  Policyrelrecession.tex  cumulativemultipliers_SplurgeComp.tex  splurge0_Norwayestimation.tex  splurge_estimation.tex  untargetedMoments.tex  untargetedMoments_wSplZero.tex
README/: CONTRIBUTING.md  DOCKER.md  GETTING-STARTED.md  QUICK-REFERENCE.md  REPLICATION.md  TROUBLESHOOTING.md  provenance.md
README_IF_YOU_ARE_AN_AI/: 000_AI_QUICK_START_GUIDE.md  010_PAPER_ABSTRACT_AND_CLAIMS.md  020_RESEARCH_CONTEXT_AND_FINDINGS.md  030_COMPUTATIONAL_WORKFLOWS.md  035_MODEL_SUMMARY.md  040_MATHEMATICAL_STRUCTURE.md  045_EQUATION_MAP.md  047_STATE_SPACE_AND_FLOW.md  048_RAG_INDEXING_STRATEGY.md  060_CODE_NAVIGATION.md  070_INTERACTIVE_DASHBOARD.md  080_TROUBLESHOOTING_FOR_AI_SYSTEMS.md  EXPECTED_WARNINGS.md  FIGURE_TABLE_SUBFILE_COMPILATION.md  LATEX-TABLE-PDF-HTML-FORMATTING-GUIDE.md  README-SYSTEM-DEPENDENCIES.md  README.md  SUMMARY.json  WORKFLOWS.md  add_html_metadata.sh
Subfiles/: ._relpath-to-latexroot.ltx  .latexmkrc  Appendix-HANK.tex  Appendix-NoSplurge.tex  Appendix-Robustness.tex  Comparing-policies.tex  Conclusion.tex  HAFiscal-titlepage.tex  HANK.tex  Intro.tex  Model.tex  Parameterization.tex  _config.yml  literature.tex
Tables/: AUTOMATION_OPPORTUNITIES.md  Comparison_Splurge_Table.md  Comparison_Splurge_Table.tex  MPC_WQ.tex  MPC_WQ_sources.md  Multiplier.tex  Multiplier_SplurgeComp.tex  README.md  batch_compile_all_tables.sh  calibration.tex  calibrationRecession.tex  calibration_sources.md  estimBetas.tex  estimBetas_sources.md  nonTargetedMoments.tex  nonTargetedMoments_wSplZero.tex  template.tex  welfare6-SplurgeComp.tex  welfare6.tex
binder/: README.md  apt.txt  environment.yml  requirements.txt
dashboard/: DASHBOARD_README.md  app.ipynb  app.py  environment.yml  hafiscal.ipynb  hafiscal.py  hank_sam.py  plotting_functions.py  postBuild  start-dashboard.sh  test_hank_sam.py
history/: 20250720-1422h_summarize-repo.md  20250720-1522h_add-ci_add-docker-support.md  20250720-1743h_restore_computational_reproduction.md  20250729-1803h_debug-latex-build-system-fix-scripts.md  20250812-1404h_refs-cleanup-and-reproduce-run.md  20250812-1718h_merge-and-build-stabilization.md  20250812-1732h_branch-reconciliation-plan.md  20250812-2125h_latexmk-symlink-ci-short-toggle.md  20250813-2326h_chat-workflow-end-execution.md  20250813-merge-plan-20250612_finish-latexmk-fixes-into-master.md  20250824-1731_subfile-compilation-fixes.md  20250829-1121h_github-urls-appendix-reproduction-fixes.md  20250831-1524h_bibliography-sync-cleanup.md  20250907-1603h_smart-bibliography-system-cross-reference-fixes.md  20250910-1916h_smartbib-diagnosis-timeline-investigation.md  20250911-2326h_tex4ht-externaldocument-compatibility-fixes.md  20250921-1521h_package-management-github-pages-fixes.md  20250924-1409h_latex-pdfonly-compilation-system-analysis.md  20250930-2259h_pdf-text-comparison-analysis.md  20251008-2222h_devcontainer-fixes-repo-cleanup-314mb.md
images/: convert-symlinks-to-text.sh  sync-from-relpath.sh
reproduce/: PLATFORM_VENVS.md  README.md  miktex-setup.sh  (+20 more)
(+139 files in other folders)
